# Fantoche-automation

./: docker-compose.yml  package-lock.json  package.json  readme.md
Automation/: .env.example  .gitignore  Automation.sln  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  launchSettings.json  mongo-init.js  readme.md  redis.conf
Automation.Api.Shared/: Automation.Api.Shared.csproj
Automation.Dal.Models/: Graph.cs  TaskInstance.cs  TaskTarget.cs
Automation.Worker.Cli/: Automation.Worker.Cli.csproj
Automation/Automation.Api.Client/: Automation.Api.Client.csproj  ISupervisorClients.cs  ScopeClient.cs
Automation/Automation.Api.Shared/: WorkerInstance.cs
Automation/Automation.Api.Supervisor/: Automation.Api.Supervisor.csproj  Automation.Api.Supervisor.http  Automation.Api.Supervisor.njsproj  Dockerfile  Program.cs  README.md  WeatherForecast.cs  api.nswag  package.json
api-supervisor/: .env  Cargo.toml  package-lock.json  package.json  server.js
api-supervisor/lib/: database.js
api-supervisor/plugins/actions/: actions.js
api-supervisor/plugins/scopes/: scopes.js
api-supervisor/plugins/scopes/_id/: scope.js  scopes.js
api-supervisor/plugins/scopes/_id/action/: action.js
api-supervisor/plugins/scopes/_id/actions/: actions.js
api-supervisor/prisma/: schema.prisma
api-supervisor/src/: data.rs  main.rs
api-supervisor/src/db/: mod.rs
api-supervisor/src/models/: scopes.rs
api-supervisor/src/routes/: mod.rs  scopes.rs
app/: README.md  astro.config.mjs  package-lock.json  package.json  vite.config.js
app/src/: app.html
(+914 files in other folders)
