[package]
name = "api-supervisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket =  { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
mongodb = "2.1.0"
futures = "0.3"
chrono = "0.4"